--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,45 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Muchu Venkata Karthik",
+        "url": "https://mvkarthik.onrender.com",
+        "jobTitle": "Web Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Self-Employed"
+        },
+        "alumniOf": {
+          "@type": "EducationalOrganization",
+          "name": "KONERU LAKSHMAIAH EDUCATION FOUNDATION",
+          "sameAs": "https://www.kluniversity.in/"
+        },
+        "knows": ["HTML5", "CSS3", "React", "JavaScript", "Node.js", "Express", "MongoDB", "MySQL"],
+        "hasCredential": [
+          {
+            "@type": "EducationalOccupationalCredential",
+            "name": "AUTOMATION ANYWHERE CERTIFIED ESSENTIALS RPA PROFESSIONAL",
+            "credentialCategory": "Professional Certificate",
+            "recognizedBy": "AUTOMATION ANYWHERE"
+          },
+          {
+            "@type": "EducationalOccupationalCredential",
+            "name": "Red Hat Certified Enterprise Application Developer",
+            "credentialCategory": "Professional Certificate",
+            "recognizedBy": "Red Hat"
+          },
+          {
+            "@type": "EducationalOccupationalCredential",
+            "name": "Salesforce Certified AI Associate",
+            "credentialCategory": "Professional Certificate",
+            "recognizedBy": "Salesforce"
+          }
+        ]
+      }
+      </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +63,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>venkata larthik</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>muchu venkata karthik's portfolio.</noscript>
     
     <div id="root"></div>
     <!--
