--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-site-verification" content="NJydwyEilAQRdHpMA7-lzlijMLSuyKrdnvGrLpSbM5w" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
