--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Muchu Venkata Karthik",
-        "url": "https://mvkarthik.onrender.com",
+        "url": "http://muchukarthik.me",
         "jobTitle": "Web Developer",
         "worksFor": {
           "@type": "Organization",
-          "name": "Self-Employed"
+          "name": "Student"
         },
         "alumniOf": {
           "@type": "EducationalOrganization",
@@ -64,7 +64,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>venkata larthik</title>
+    <title>Venkata Karthik</title>
   </head>
   <body>
     <noscript>muchu venkata karthik's portfolio.</noscript>
