--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio of Muchu Venkata Karthik, a web developer specializing in React, Node.js, and full-stack development. View my projects and skills"
     />
     <meta name="google-site-verification" content="NJydwyEilAQRdHpMA7-lzlijMLSuyKrdnvGrLpSbM5w" />
     <script type="application/ld+json">
